Implemented Lazy loading & slider functionality

--- a/index.html
+++ b/index.html
@@ -228,8 +228,8 @@
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-1.jpg" alt="" class="testimonial__photo" />
-              <h6 class="testimonial__name">Aarav Lynn</h6>
-              <p class="testimonial__location">San Francisco, USA</p>
+              <h6 class="testimonial__name">Himanshu</h6>
+              <p class="testimonial__location">Delhi, India</p>
             </address>
           </div>
         </div>
@@ -248,8 +248,8 @@
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-2.jpg" alt="" class="testimonial__photo" />
-              <h6 class="testimonial__name">Miyah Miles</h6>
-              <p class="testimonial__location">London, UK</p>
+              <h6 class="testimonial__name">Kavya</h6>
+              <p class="testimonial__location">Mumbai, India</p>
             </address>
           </div>
         </div>
@@ -269,16 +269,18 @@
             </blockquote>
             <address class="testimonial__author">
               <img src="img/user-3.jpg" alt="" class="testimonial__photo" />
-              <h6 class="testimonial__name">Francisco Gomes</h6>
-              <p class="testimonial__location">Lisbon, Portugal</p>
+              <h6 class="testimonial__name">Prince</h6>
+              <p class="testimonial__location">Bangalore, India</p>
             </address>
           </div>
         </div>
 
-        <!-- <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
+        <!-- Testing image Slider -->
+        <!--  <div class="slide"><img src="img/img-1.jpg" alt="Photo 1" /></div>
         <div class="slide"><img src="img/img-2.jpg" alt="Photo 2" /></div>
         <div class="slide"><img src="img/img-3.jpg" alt="Photo 3" /></div>
         <div class="slide"><img src="img/img-4.jpg" alt="Photo 4" /></div> -->
+
         <button class="slider__btn slider__btn--left">&larr;</button>
         <button class="slider__btn slider__btn--right">&rarr;</button>
         <div class="dots"></div>
